<resources>
    <string name="app_name">DailyLines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="timer">Timer</string>
    <string name="hello">Hello</string>
    <string name="add_button">add_button</string>
    <string name="your_notes">Your Note\'s</string>
    <string name="note_title">Note Title</string>
    <string name="fake_note_description">This is just a bunch of rubbish text as a note
    description to see how items would look like</string>
    <string name="fake_date">1/20/2022</string>
    <string name="task_fake_title">Implement material design rules</string>
</resources>