<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/purple_item"
    android:minHeight="140dp"
    android:layout_marginHorizontal="6dp"
    app:cardCornerRadius="12dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/note_title"
            android:textSize="14sp"
            android:textColor="@color/header_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/note_description"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fake_note_description"
            android:textColor="@color/body_text_color"
            android:maxLines="4"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/note_title"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/note_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textSize="10dp"
            android:textColor="@color/body_text_color_2"
            android:text="@string/fake_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_description"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>